syntax = "proto3";
option go_package = "gateway.rpc.v1";

message BuildRequest {
    //    Build User
    string user = 1;
    //    Build Name
    string name = 2;
}

// JobDetail
// Job Detail Info
message JobDetail {
    string name = 1;
    int32 status = 2;
    string timestamp = 3;
    string branch = 4;
    string url = 5;
}

message JobInfo {
    int32 count = 1;
    repeated JobDetail jd = 2;
}

service GateWayRpc {
    //    GetBuild Query User's All Builds
    rpc GetBuild (BuildRequest) returns (JobInfo) {
    }
}